--- a/ch01/style3.css
+++ b/ch01/style3.css
@@ -1,24 +1,29 @@
 *{
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 body{
-    margin: 0;
+  margin: 0;
 
 }
-div{
-    display: flex;
-    min-height: 20vh;
-    justify-content: space-between;
 
-}
 header,footer{
-    background-color:gray;
-    height: 20vh;
+  background-color:gray;
+  height: 20vh;
 }
-span{
-    display: flex;
-    background-color: pink;
 
+.main {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2px;
+}
 
-    
+.main__item {
+  width: calc((100% - 4px)/3);
+  background: rgba(255, 0, 0, .2);
+}
+
+.main__item::before {
+  content: '';
+  display: block;
+  padding-top: 100%;
 }
