--- a/ch01/style2.css
+++ b/ch01/style2.css
@@ -1,21 +1,21 @@
 *{box-sizing: border-box;}
 body{margin: 0;}
 #main{
-    display: flex;
-    min-height: 60vh;
+  display: flex;
+  min-height: 60vh;
 }
 #main>article{
-    flex:1;
+  flex:1;
 }
 nav{
-    order: -1;
-    flex:0 0 20vw;
-    background-color: aqua;
+  order: -1;
+  flex-basis: 20vw;
+  background-color: aqua;
 }
 header,footer{
-    background-color: bisque;
-    height: 20vh;
+  background-color: bisque;
+  height: 20vh;
 }
 header,footer,nav,article{
-    padding: 1em;
+  padding: 1em;
 }
